[tool.poetry]
name = "vastai-helper"
version = "0.1.1"
description = ""
authors = ["fanf <fanf@fanf>"]
readme = "README.md"
packages = [{include = "vastai_helper", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
vastai = "^0.1.8"
click = "^8.1.7"

[tool.poetry.scripts]
vasthelp = 'vastai_helper.scan:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
